# antiloop

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  antiloop-proxy.envfile.service  antiloop-proxy.service  compose.yaml  main.py  pyproject.toml  run.sh
antiloop_proxy/: __init__.py  __main__.py  app.py
examples/: launch-qwen3-coder-next-llamacpp.sh
tests/: test_proxy.py
