[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antiloop-proxy"
version = "0.1.0"
description = "OpenAI-compatible proxy with anti-loop guardrails for local tool-calling models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
antiloop-proxy = "antiloop_proxy.__main__:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
